# tsr

./: LICENSE  pyproject.toml
src/tsr/: __init__.py  generic.py  tsr.py  tsrlibrary.py
tests/tsr/: test_tsr.py  visualize_tsr.py
